--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,2 @@
-Oluwatobiloba P. Johnson <toby.johnson.precious@gmail.com>
-Abiakwe G. Febechi <godsonsaviour7@gmail.com>
+Somade Daniel Oluwaseunfunmi <flexsidee@gmail.com>
+Abiodun Temiloluwa Daniel
